--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
 
+    <string name="kakao_app_key">b77b68d0cbbb915282c1468b005247a6</string>
 </resources>
