--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
 
 
     <string name="kakao_app_key">b77b68d0cbbb915282c1468b005247a6</string>
+    <string name="radio_male">M</string>
+    <string name="radio_female">F</string>
 </resources>
